Migração completa para Entity Framework Core
- Removidos arquivos legados: Database - Game.cs, Database - Lobby.cs, Query.cs
- Substituído MySql.Data por EF Core 9.0.0 + Pomelo.EntityFrameworkCore.MySql 9.0.0
- Implementado Repository Pattern com suporte genérico para CRUD
- Criadas entidades: Account, Character, DigimonEntity, Server
- Implementado DesignTimeDbContextFactory para suporte a dotnet ef commands
- Criado DatabaseConfigForm.xaml para recuperação de configuração de banco
- Adicionado sistema de retry automático com UI em caso de falha de conexão
- Removidos atributos [Column] e [Table] das entidades (convenções EF Core)
- Gerado script SQL do schema do banco (database_schema.sql)
- Documentação completa em MIGRAÇÃO_ENTITY_FRAMEWORK.md
- Todos os servidores (Auth, Lobby, Game) inicializando banco via InitializeEF()
- Database criado e testado com sucesso em MySQL 192.168.0.100

Estrutura implementada:
📁 Yggdrasil/Data/
  ├── DigitalWorldContext.cs (DbContext com 4 tabelas)
  ├── DbContextFactory.cs (Factory pattern + teste de conexão)
  ├── DesignTimeDbContextFactory.cs (dotnet ef support)
  └── Repositories/Repository.cs (CRUD genérico)
📁 Yggdrasil/Data/Entities/
  ├── Account.cs (acct table)
  ├── Character.cs (chars table)
  ├── DigimonEntity.cs (digimon table)
  └── Server.cs (servers table)
📁 Yggdrasil/Forms/
  ├── DatabaseConfigForm.xaml
  └── DatabaseConfigForm.xaml.cs (UI de recuperação)

Status: ✅ 0 erros de compilação, banco criado, servidores funcionando

--- a/Yggdrasil/Yggdrasil.csproj
+++ b/Yggdrasil/Yggdrasil.csproj
@@ -39,8 +39,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data" Version="9.1.0" />
     <PackageReference Include="NLua" Version="1.7.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'Release'">
