Implementação de proteção de buffer 131KB com divisão de pacotes e uso de ushort
- Aumentado BUFFER_SIZE de 4KB para 131KB (128KB)
- Adicionado MAX_PACKET_SIZE = 500 bytes
- Implementado buffer de acumulação para processar múltiplos pacotes
- Alterado tamanho de pacote de Int16 para UInt16 (ushort)
- Adicionado limpeza automática de buffers com Array.Clear
- Método ProcessMultiplePackets processa até 500 pacotes por recebimento
- Validação de tamanho de pacote e proteção contra overflow
- Buffers sempre zerados após processamento para evitar dados residuais

--- a/src/Ferramentas/Hypnos Server/Hypnos Server.csproj
+++ b/src/Ferramentas/Hypnos Server/Hypnos Server.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net10.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
@@ -13,7 +12,6 @@
     <Configurations>Debug;Release;Complete</Configurations>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +20,6 @@
     <OutputPath>C:\DMOServer\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
@@ -30,7 +27,6 @@
     <OutputPath>C:\DMOServer\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Complete|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
@@ -38,5 +34,5 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
   </PropertyGroup>
-
+  <Import Project="Hypnos Server.dotnet_reactor.targets" Condition="Exists('Hypnos Server.dotnet_reactor.targets')" />
 </Project>
