--- a/Settings.json
+++ b/Settings.json
@@ -1,7 +1,7 @@
 {
   "Database": {
     "Host": "192.168.0.100",
-    "Username": "dmo",
+    "Username": "root",
     "Password": "Tb6!kV7-yM!z7FS#BevB",
     "Schema": "digitalworld"
   },
